# water-tracking

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  Gemfile  LICENSE  Makefile  README.md  README_openai_projects.md  _bash_profile  _config.yml  _gvimrc  create_openai_projects.py  cronjobs  index.md  log_rotate.conf  nohup.out  pyproject.toml  subsample_directory.sh
.github/workflows/: pages.yml
Bimpop.ai/: README.md
Bimpop.ai/aiy_hat/: aiy_runner.py  auth_helpers.py
Bimpop.ai/app/: indexer.py  main.py  queries.py  utils.py
Bimpop.ai/fe/: streamlit_app.py  utils.py
BrowserAlert/: README.md  alert_me.py
GarageCheck/: check_garage_door.py  tf-one-shot.py  tf-trial.py  transferlearn_on_imagenet.py
LambdaEmailFwder/: Readme.md  index.js  test_event.json
NetworkCheck/: EmailMyIP.py  test_uplink.py
NodeCheck/: check_nodes.py  google_script.gs  purge_old_foscam_files.py  purge_old_foscam_files.sh  reboot_applied.html  reboot_foscam.php
OpenAIAdmin/: HackWeek2025.csv  README_openai_projects.md  create_openai_projects.py
Parser/: PumpReport.py  PumpStatsWriter.py  TuyaLogParser.py  compute_pump_stats.py
PowerWall/: main.py
RAG/: README.md  aiy_runner.py  requirements.txt
RAG/aiy/: aiy_runner.py
RAG/aiy_hat/: aiy_runner.py  auth_helpers.py
RAG/app/: indexer.py  main.py  queries.py  utils.py
RAG/fe/: streamlit_app.py  utils.py
RachioFlume/: README.md  collector.py  data_storage.py  flume_client.py  logger.py  main.py  rachio_client.py  reporter.py  requirements.txt  test_integration.py
Rebooter/: check_nodes.py  purge_old_foscam_files.sh
Tesla/: README.md  manage_power.py  manage_power2.py  manage_power_clean.py  powerwall.py  setup.sh  tesla_all.py  tesla_async_apis.py  test.py  test_manage_power.py  test_manage_power_clean.py
WaterLogging/: get_rachio_events.js  poll_flume2.py  poll_rachio.js  poll_tuya.sh
WaterMonitoring/: package-lock.json  poll_rachio.js  poll_tuya.sh
WaterMonitoring/html/: index.html  last_10_mornings.html  last_day.html  pump_rates.html
WaterMonitoring/html/JS/: common.js
WaterParser/: PumpReport.py  PumpStatsWriter.py  TuyaLogParser.py  compute_pump_stats.py
WaterParser/html/: WaterParser_html  last_10_mornings.html  last_day.html  pump_rates.html  report.html
WaterParser/html/JS/: jquery-1.11.1.min.js  jquery.canvasjs.min.js  jquery.canvasjs.min.js_2.2_non_commercial
_layouts/: default.html
assets/css/: style.scss
backups/: node_modules-tuyaapi-cli-cli.js  node_modules-tuyaapi-cli-lib-control.js
lib/: Constants.py.sample  Constants.sh.sample  EmailMyIP.py  FoscamImager.py  Mailer.py  MyPushover.py  MyTwilio.py  NetHelpers.py  TFOneShot.py  \  check_temp.sh  tuya_switch_config_cli.json.3852531045
openai-automation/: README_openai_projects.md  create_openai_projects.py  requirements.txt  sample_teams.csv
scripts/: secret-scan.sh
